@startuml

rectangle "Alert Generation System" as AGS {
    class "AlertGenerator" as AG {
        +evaluateData(data : PatientData)
        +triggerAlert(alert : Alert)
    }

    AG --> A

    class "Alert" as A {
        +parentId : String
        +condition : String
        +timestamp : DateTime
    }

    class "AlertManager" as AM {
        +sendAlert(alert : Alert)
    }

    AM --> A
    AM -left-> AG
}

class "DataStorage" as DS {
    +storeData(data : PatientData) : void
    +retrieveData(patientId : String) : PatientRecord
    +updateData(data : PatientData) : void
}

DS --> AG

@enduml